# build-nanogpt

./: .gitignore  main.py  play.ipynb  pyproject.toml  train_gpt2.py
